Bug 387131 - table column is inserted to the wrong side
Summary: table column is inserted to the wrong side
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-19 21:44 UTC by uwestoehr
Modified: 2017-12-05 00:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-19 21:44:09 UTC
- create a new spreadsheet with 3 columns
- mark the middle column and right-click
- choose Insert Empty Columns

result: the new column is inserted to the left side. I expect to choose the side of insertion. Or better, rename that entry to "add to the left" and rename the Add Column entry to "insert to the right".
Comment 1 Alexander Semke 2017-12-04 20:23:34 UTC
Git commit fd9a119b86109b8866df9469955d7f7ff69d3fed by Alexander Semke.
Committed on 04/12/2017 at 20:21.
Pushed by asemke into branch 'master'.

More robust and more consistent implementation of the handling of creation of new columns and rows in SpreadsheetView:
* add columns left/right to the current selection
* add rows above/below to the current selection
FIXED-IN: 2.5

M  +132  -86   src/commonfrontend/spreadsheet/SpreadsheetView.cpp
M  +8    -9    src/commonfrontend/spreadsheet/SpreadsheetView.h

https://commits.kde.org/labplot/fd9a119b86109b8866df9469955d7f7ff69d3fed
Comment 2 uwestoehr 2017-12-05 00:30:04 UTC
many thanks. works fine.