More robust and more consistent implementation of the handling of creation of new columns and rows in SpreadsheetView: * add columns left/right to the current selection * add rows above/below to the current selection

BUG: 387131
FIXED-IN: 2.5